# cs781-s26

./: .gitignore  README.md  Unit_2_Notes.txt  build_pdf.py  project_topics.html  syllabus-AI for Health and Life Sciences-20260119.docx
project/: .gitignore  CS781 – AI for Health Sciences.md  CS781_Milestone_2_Progress_Anton_Rasmussen.html  README.md  build_pdf.py  build_update_pdf.py  milestone_2_progress.md  milestone_3_progress.md  pipeline_diagram.mmd  pyproject.toml  requirements.txt
project/artifacts/: README.md
project/configs/: base.yaml
project/docs/: AUDIT_COMMENTS_AND_PROMPTS.md  CONSISTENCY_MATRIX.md  INVENTORY.md  ISSUES.md  README.md  REORGANIZATION_LAYOUT.md  architecture.md  cuda_pubmed_handoff.md  data_inventory.md  execution_modes.md  experiment_protocol.md  proposal.md  reproducibility_note.md  reproducibility_note_template.md
project/experiments/: build_final_report.py  build_m3_report.py  run_grid.py  run_local.py  run_mvp.py
project/notebooks/: 01_data_audit.ipynb  02_prompt_template_dev.ipynb
project/reports/: final_metrics.md  final_report.aux  final_report.md  final_report.tex  hypothesis_tests.md  m3_metrics.md  milestone_3_status.md  output.txt  preregistration.md  rubric_audit.md  run_ids_manifest.md
project/scripts/: apply_calibration.py  audit_dataset.py  diagnose_background_collapse.py  download_pubmed_rct.py  export_verification_runs.py  inspect_run.py  make_dev_subset.py  monitor_matrix_progress.py  validate_label_codes.py  verify_hf_access.py  watch_and_retry_matrix.py
project/tests/: test_ace.py  test_artifact_store.py  (+15 more)
(+171 files in other folders)
