[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability-eval"
version = "0.1.0"
description = "Reliability evaluation harness for quantized biomedical LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]
flyte = ["flytekit>=1.0.0"]
gpu = [
    "torch>=2.2",
    "transformers>=4.40,<5.0",
    "accelerate>=0.29",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "sentencepiece>=0.2",
]

[project.scripts]
reliability-eval = "reliability_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
